--- a/app/views/tasks/_form.html.slim
+++ b/app/views/tasks/_form.html.slim
@@ -1,3 +1,7 @@
+- if task.errors.present?
+  ul#error_explanation
+    - task.errors.full_messages.each do |message|
+      li = message
 = form_with model: task, local: true do |f|
   .form-group
     = f.label :name
@@ -5,4 +9,4 @@
   .form-group
     = f.label :description
     = f.text_area :description, rows: 5, class: 'form-control', id: 'task_description'
-  = f.submit "編集する", class: 'btn btn-primary'
+  = f.submit "完了", class: 'btn btn-primary'
